# llm-sdk

./: Cargo.toml
src/: lib.rs
src/api/: chat_completion.rs  create_image.rs  mod.rs
