[package]
name = "llm-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
derive_builder = "0.20.0"
reqwest = { version = "0.12.4",default-features = false ,features = ["json", "rustls-tls", "gzip"]}
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
[dev-dependencies]
tokio = { version = "1.37.0",features = ["rt", "rt-multi-thread", "macros"] }
